fix(ui): put buttons in a single row on mobile

--- a/web_src/css/base.css
+++ b/web_src/css/base.css
@@ -250,6 +250,20 @@ h1.error-code {
   gap: 0.5rem;
 }
 
+.button-sequence {
+  display: flex;
+  flex-flow: wrap;
+  gap: 0.5em;
+}
+
+.button-sequence.right {
+  justify-content: end;
+}
+
+.button-sequence .ui.button {
+  margin: 0 !important;
+}
+
 .button-row .ui.button {
   margin-right: 0;
 }
